# iracing-tracker

./: .gitignore  LICENSE  README.md  ROADMAP.md  app.ini  camera.ini  controls.cfg  controls_convert.py  core.ini  fueldata.ini  joyCalib.yaml  pyproject.toml  rendererDX11Monitor.ini  requirements.md  start-gui.bat
.claude/: launch.json
.github/workflows/: release.yml
examples/: my_binds.example.json
packaging/: build-exe.ps1  launcher.py
src/irtracker/: __init__.py  __main__.py  build.py  cli.py  config.py  ctrlprofile.py  doctor.py  gui.py  lint.py  notify.py  overlay.py  paste.py  recipes.py  repo.py  report.py  semdiff.py  simstate.py  snapshot.py  tasksched.py  tray.py  updater.py  watcher.py
src/irtracker/gfcc/: __init__.py  analyze.py  codec.py  devices.py  keymap.py  patch.py
src/irtracker/webui/: app.js  index.html  styles.css
tests/: conftest.py  test_analyze.py  test_cli.py  test_codec.py  test_ctrlprofile.py  test_doctor.py  test_edit_binds.py  test_overlay.py  test_paste.py  test_patch.py  test_profiles.py  test_recipes.py  test_report.py  test_semdiff.py  test_session_outcome.py  test_tracker.py  test_updater.py  test_watcher_reload.py
tools/: preview_gui.py
