[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iracing-config-tracker"
version = "0.1.0"
description = "Version control for iRacing configuration files: change detection, history, restore, and a controls.cfg (GFCC) codec."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "watchdog>=4.0",
    "psutil>=5.9",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Optional at runtime: the watcher degrades gracefully without them.
sim = ["pyirsdk>=1.3"]
toast = ["winotify>=1.1"]
dev = ["pytest>=8.0"]

[project.scripts]
irtrack = "irtracker.cli:main"
gfcc = "irtracker.cli:gfcc_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
