[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iracing-config-tracker"
version = "0.1.0"
description = "Version control for iRacing configuration files: change detection, history, restore, and a controls.cfg (GFCC) codec."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "watchdog>=4.0",
    "psutil>=5.9",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Optional at runtime: the watcher degrades gracefully without them.
sim = ["pyirsdk>=1.3"]
toast = ["winotify>=1.1"]
# Native app window for the GUI. Without it, `irtrack gui` falls back to the
# browser, so this is optional.
gui = ["pywebview>=5.0"]
dev = ["pytest>=8.0"]

[project.scripts]
irtrack = "irtracker.cli:main"
gfcc = "irtracker.cli:gfcc_main"
irtrack-gui = "irtracker.gui:launch"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
irtracker = ["webui/*.html", "webui/*.css", "webui/*.js", "webui/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
